Fixed shadows and scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none; /* IE and Edge */
+}
+
+*::-webkit-scrollbar {
+	display: none; /* Chrome, Safari and Opera */
 }
 
 body {
@@ -51,14 +57,7 @@ main {
 	overflow-x: hidden;
 	height: 100%;
 	padding: 20px 0;
-	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
-
-	/* Hide scrollbar */
-	scrollbar-width: none;
-	-ms-overflow-style: none;
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
 
 	& .line {
 		display: flex;
